--- a/src/app/pages/home/components/ListTask/list-task.html
+++ b/src/app/pages/home/components/ListTask/list-task.html
@@ -1,7 +1,10 @@
 <section class="space-y-8">
-  <section class="space-y-2">
+  <section class="space-y-4">
     <h2 class="font-medium">Pending Tasks</h2>
-    @for(task of taskService.getPendingTasks(); track task.id) {
+    @if(taskService.pendingTasks().length === 0) {
+    <p>No pending tasks</p>
+    } @else {
+    @for(task of taskService.pendingTasks(); track task.id) {
     <div class="bg-white rounded shadow p-4 flex justify-between items-center gap-8">
       <div class="flex items-center gap-2">
         <mat-checkbox class="example-margin" [checked]="task.completed"
@@ -22,11 +25,15 @@
       </div>
     </div>
     }
+    }
   </section>
   <hr />
-  <section class="space-y-2">
+  <section class="space-y-4">
     <h2 class="font-medium">Completed Tasks</h2>
-    @for(task of taskService.getCompletedTasks(); track task.id) {
+    @if(taskService.completedTasks().length === 0) {
+    <p>No completed tasks</p>
+    } @else {
+    @for(task of taskService.completedTasks(); track task.id) {
     <div class="rounded shadow p-4 flex justify-between items-center gap-8 line-through bg-black/10">
       <div class="flex items-center gap-2">
         <mat-checkbox class="example-margin" [checked]="task.completed"
@@ -46,6 +53,7 @@
         </button>
       </div>
     </div>
+    }
     }
   </section>
 </section>
