--- a/src/app/pages/home/page.html
+++ b/src/app/pages/home/page.html
@@ -1,5 +1,9 @@
-<div class="container mt-8 flex flex-col gap-8">
+<div class="container flex flex-col gap-8 py-8">
   <h2 class="text-xl font-medium">What do you have to do?</h2>
   <add-task-form />
+  @defer {
   <list-task />
+  } @loading (minimum 300ms) {
+  <mat-icon aria-hidden="false" aria-label="Loading icon" fontIcon="sync" class="animate-spin mx-auto"></mat-icon>
+  }
 </div>
